<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Timer"
        android:icon="@drawable/baseline_access_time_24"
        android:id="@+id/timer"/>
    <item android:title="Tasks"
        android:icon="@drawable/baseline_add_task_24"
        android:id="@+id/tasks"/>
    <item android:title="Log out"
        android:icon="@drawable/baseline_logout_24"
        android:id="@+id/logout"/>
</menu>